--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 /* Customize your main colors in :root variables */
 :root {
-  --main-background-color: #343A50;
-  --card-background-color: #51576D;
-  --card-background-lighter-color: #7A7F92;
-  --main-text-color:#F7F6F4;
-  --title-text-color:#3CBA8B;
+  --main-background-color: #000000;
+  --card-background-color: #000000;
+  --card-background-lighter-color: #000000;
+  --main-text-color:#ffffff;
+  --title-text-color:#ffffff;
 }
 
 body{
   background-color:var(--main-background-color);
-  font-family: 'Patrick Hand', cursive;
+  font-family: 'Arial', cursive;
   font-size: 1.2em;
 }
 
